--- a/index.html
+++ b/index.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-<meta charset="UTF-8">
-<title>বিজয় দিবস ২০২৫ আমন্ত্রণপত্র</title>
-
-<!-- External CSS -->
-<link rel="stylesheet" href="style.css">
-
+    <meta charset="UTF-8">
+    <title>বিজয় দিবস ২০২৫ আমন্ত্রণপত্র</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <div class="wrapper">
 
-    <!-- INPUT BOX -->
-    <div class="input-box">
-        <h2>আপনার নাম লিখুন</h2>
-        <input type="text" placeholder="আপনার নাম লিখুন">
-    </div>
-
-    <!-- INVITATION CARD -->
     <div class="card">
 
         <img src="logo.png" alt="বাংলাদেশ সরকার সীল">
 
         <h2>১৬ই ডিসেম্বর — বিজয় দিবস ২০২৫</h2>
 
-        <p>প্রিয় <span class="name">আপনার নাম এখানে</span>,</p>
+        <p>প্রিয় <span class="name">তৌহিদ সারকার</span>,</p>
 
         <p>
         ১৬ই ডিসেম্বর বাংলাদেশের বিজয় দিবস — বাঙালির অহংকারের দিন।
