--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <h2>১৬ই ডিসেম্বর — বিজয় দিবস ২০২৫</h2>
 
-        <p>প্রিয় <span class="name">তৌহিদ সারকার</span>,</p>
+        <p>প্রিয় <span class="name">TAUHID SARKER</span>,</p>
 
         <p>
         ১৬ই ডিসেম্বর বাংলাদেশের বিজয় দিবস — বাঙালির অহংকারের দিন।
